--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.21.0",
     "better-scroll": "^2.0.6",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "moment": "^2.29.1",
+    "px2rem-loader": "^0.1.9",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
