--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "element-ui": "^2.14.1",
     "moment": "^2.29.1",
     "px2rem-loader": "^0.1.9",
+    "vant": "^2.12.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-preview": "^1.0.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -23,8 +25,10 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.3",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
